# acadrust-dxf-bench

./: .gitignore  Cargo.toml  LICENSE  README.md  REPORT.md
acadsharp-bench/: Program.cs  acadsharp-bench.csproj
benches/: parse_bench.rs  roundtrip_bench.rs  write_bench.rs
ezdxf-bench/: bench.py
reports/: 00_summary.md  01_dxf_parse.md  02_dxf_write.md  03_dxf_roundtrip.md  04_binary_dxf_parse.md  05_binary_dxf_write.md  06_binary_dxf_roundtrip.md  07_dwg_parse_write.md  08_dwg_roundtrip.md
reports/0.3.0/: 03_dxf_roundtrip.md  04_binary_dxf_parse.md  05_binary_dxf_write.md  06_binary_dxf_roundtrip.md
reports/0.3.1/: 00_summary.md  01_dxf_parse.md  02_dxf_write.md  03_dxf_roundtrip.md  04_binary_dxf_parse.md  05_binary_dxf_write.md  06_binary_dxf_roundtrip.md  07_dwg_parse_write.md  08_dwg_roundtrip.md
src/: generators.rs  main.rs
