[package]
name = "acadrust-dxf-bench"
version = "0.1.0"
edition = "2021"
description = "Heavy-duty DXF parsing/writing performance benchmark suite comparing dxf-rs and acadrust"

[dependencies]
dxf = "0.6"
acadrust = { path = "../acadrust" }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "roundtrip_bench"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
